load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@sha256.bzl", "sha256")

known_result = "2cf24dba5fb0a30e26e83b2ac5b9e29e1b161e5c1fa7425e73043362938b9824"

build_test(
    name = "sha256_build_test",
    targets = [
        "@sha256.bzl//:sha256",
    ],
) if sha256("hello") == known_result else fail("expected {}, but got {}".format(known_result, sha256("hello")))
